1.5.0/_sources/reference/dipy.tracking.rst.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

:mod:`tracking`
===============
.. automodule:: dipy.tracking

.. currentmodule:: dipy.tracking
.. autosummary::

   Streamlines
   bench
   test

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`tracking._utils`
------------------------------
.. automodule:: dipy.tracking._utils

.. currentmodule:: dipy.tracking._utils
.. autosummary::


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`tracking.benchmarks`
----------------------------------
.. automodule:: dipy.tracking.benchmarks

.. currentmodule:: dipy.tracking.benchmarks
.. autosummary::


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`tracking.benchmarks.bench_streamline`
---------------------------------------------------
.. automodule:: dipy.tracking.benchmarks.bench_streamline

.. currentmodule:: dipy.tracking.benchmarks.bench_streamline
.. autosummary::

   Streamlines
   assert_array_almost_equal
   assert_array_equal
   bench_compress_streamlines
   bench_length
   bench_set_number_of_points
   generate_streamlines
   get_fnames
   length
   length_python
   load_tractogram
   measure
   set_number_of_points
   set_number_of_points_python
   setup

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`tracking.direction_getter`
----------------------------------------
.. automodule:: dipy.tracking.direction_getter

.. currentmodule:: dipy.tracking.direction_getter
.. autosummary::

   DirectionGetter

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`tracking.distances`
---------------------------------
.. automodule:: dipy.tracking.distances

.. currentmodule:: dipy.tracking.distances
.. autosummary::

   add_3vecs
   approx_polygon_track
   approximate_mdl_trajectory
   bundles_distances_mam
   bundles_distances_mdf
   cut_plane
   inner_3vecs
   intersect_segment_cylinder
   larch_3merge
   larch_3split
   lee_angle_distance
   lee_perpendicular_distance
   local_skeleton_clustering
   local_skeleton_clustering_3pts
   mam_distances
   minimum_closest_distance
   most_similar_track_mam
   mul_3vec
   mul_3vecs
   norm_3vec
   normalized_3vec
   point_segment_sq_distance
   point_track_sq_distance_check
   sub_3vecs
   track_dist_3pts
   track_roi_intersection_check
   warn

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`tracking.fbcmeasures`
-----------------------------------
.. automodule:: dipy.tracking.fbcmeasures

.. currentmodule:: dipy.tracking.fbcmeasures
.. autosummary::

   EnhancementKernel
   FBCMeasures
   KDTree
   interp1d
   compute_rfbc
   cpu_count
   determine_num_threads
   get_sphere
   log
   min_moving_average
   ndindex
   sqrt

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`tracking.learning`
--------------------------------
.. automodule:: dipy.tracking.learning

.. currentmodule:: dipy.tracking.learning
.. autosummary::

   detect_corresponding_tracks
   detect_corresponding_tracks_plus

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`tracking.life`
----------------------------
.. automodule:: dipy.tracking.life

.. currentmodule:: dipy.tracking.life
.. autosummary::

   FiberFit
   FiberModel
   LifeSignalMaker
   ReconstFit
   ReconstModel
   grad_tensor
   gradient
   streamline_gradients
   streamline_signal
   streamline_tensors
   transform_streamlines
   unique_rows
   voxel2streamline

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`tracking.local_tracking`
--------------------------------------
.. automodule:: dipy.tracking.local_tracking

.. currentmodule:: dipy.tracking.local_tracking
.. autosummary::

   AnatomicalStoppingCriterion
   Iterable
   LocalTracking
   ParticleFilteringTracking
   StreamlineStatus
   local_tracker
   pft_tracker

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`tracking.localtrack`
----------------------------------
.. automodule:: dipy.tracking.localtrack

.. currentmodule:: dipy.tracking.localtrack
.. autosummary::

   local_tracker
   pft_tracker
   random

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`tracking.mesh`
----------------------------
.. automodule:: dipy.tracking.mesh

.. currentmodule:: dipy.tracking.mesh
.. autosummary::

   random_coordinates_from_surface
   seeds_from_surface_coordinates
   triangles_area
   vertices_to_triangles_values

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`tracking.metrics`
-------------------------------
.. automodule:: dipy.tracking.metrics

.. currentmodule:: dipy.tracking.metrics
.. autosummary::

   arbitrarypoint
   bytes
   center_of_mass
   deprecate_with_version
   downsample
   endpoint
   frenet_serret
   generate_combinations
   inside_sphere
   inside_sphere_points
   intersect_sphere
   length
   longest_track_bundle
   magn
   mean_curvature
   mean_orientation
   midpoint
   midpoint2point
   principal_components
   set_number_of_points
   splev
   spline
   splprep
   startpoint
   winding

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`tracking.propspeed`
---------------------------------
.. automodule:: dipy.tracking.propspeed

.. currentmodule:: dipy.tracking.propspeed
.. autosummary::

   eudx_both_directions
   ndarray_offset

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`tracking.stopping_criterion`
------------------------------------------
.. automodule:: dipy.tracking.stopping_criterion

.. currentmodule:: dipy.tracking.stopping_criterion
.. autosummary::

   ActStoppingCriterion
   AnatomicalStoppingCriterion
   BinaryStoppingCriterion
   CmcStoppingCriterion
   StoppingCriterion
   StreamlineStatus
   ThresholdStoppingCriterion

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`tracking.streamline`
----------------------------------
.. automodule:: dipy.tracking.streamline

.. currentmodule:: dipy.tracking.streamline
.. autosummary::

   Streamlines
   apply_affine
   bundles_distances_mdf
   cdist
   center_streamlines
   cluster_confidence
   deepcopy
   deform_streamlines
   dist_to_corner
   interpolate_scalar_3d
   interpolate_vector_3d
   length
   nbytes
   orient_by_rois
   orient_by_streamline
   relist_streamlines
   select_by_rois
   select_random_set_of_streamlines
   set_number_of_points
   transform_streamlines
   unlist_streamlines
   values_from_volume
   warn

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`tracking.streamlinespeed`
---------------------------------------
.. automodule:: dipy.tracking.streamlinespeed

.. currentmodule:: dipy.tracking.streamlinespeed
.. autosummary::

   Streamlines
   compress_streamlines
   length
   set_number_of_points

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`tracking.utils`
-----------------------------
.. automodule:: dipy.tracking.utils

.. currentmodule:: dipy.tracking.utils
.. autosummary::

   OrderedDict
   combinations
   defaultdict
   groupby
   apply_affine
   cdist
   connectivity_matrix
   density_map
   dist_to_corner
   length
   max_angle_from_curvature
   min_radius_curvature_from_angle
   minimum_at
   ndbincount
   near_roi
   path_length
   random_seeds_from_mask
   reduce_labels
   reduce_rois
   seeds_from_mask
   streamline_near_roi
   subsegment
   target
   target_line_based
   transform_tracking_output
   unique_rows
   warn
   wraps

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`tracking.vox2track`
---------------------------------
.. automodule:: dipy.tracking.vox2track

.. currentmodule:: dipy.tracking.vox2track
.. autosummary::

   streamline_mapping
   track_counts


.. currentmodule:: dipy.tracking


:class:`Streamlines`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: Streamlines
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

bench
~~~~~

.. autofunction:: bench

test
~~~~

.. autofunction:: test


.. currentmodule:: dipy.tracking._utils


.. currentmodule:: dipy.tracking.benchmarks


.. currentmodule:: dipy.tracking.benchmarks.bench_streamline


:class:`Streamlines`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: Streamlines
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

assert_array_almost_equal
~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: assert_array_almost_equal

assert_array_equal
~~~~~~~~~~~~~~~~~~

.. autofunction:: assert_array_equal

bench_compress_streamlines
~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: bench_compress_streamlines

bench_length
~~~~~~~~~~~~

.. autofunction:: bench_length

bench_set_number_of_points
~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: bench_set_number_of_points

generate_streamlines
~~~~~~~~~~~~~~~~~~~~

.. autofunction:: generate_streamlines

get_fnames
~~~~~~~~~~

.. autofunction:: get_fnames

length
~~~~~~

.. autofunction:: length

length_python
~~~~~~~~~~~~~

.. autofunction:: length_python

load_tractogram
~~~~~~~~~~~~~~~

.. autofunction:: load_tractogram

measure
~~~~~~~

.. autofunction:: measure

set_number_of_points
~~~~~~~~~~~~~~~~~~~~

.. autofunction:: set_number_of_points

set_number_of_points_python
~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: set_number_of_points_python

setup
~~~~~

.. autofunction:: setup


.. currentmodule:: dipy.tracking.direction_getter


:class:`DirectionGetter`
~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: DirectionGetter
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


.. currentmodule:: dipy.tracking.distances

add_3vecs
~~~~~~~~~

.. autofunction:: add_3vecs

approx_polygon_track
~~~~~~~~~~~~~~~~~~~~

.. autofunction:: approx_polygon_track

approximate_mdl_trajectory
~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: approximate_mdl_trajectory

bundles_distances_mam
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: bundles_distances_mam

bundles_distances_mdf
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: bundles_distances_mdf

cut_plane
~~~~~~~~~

.. autofunction:: cut_plane

inner_3vecs
~~~~~~~~~~~

.. autofunction:: inner_3vecs

intersect_segment_cylinder
~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: intersect_segment_cylinder

larch_3merge
~~~~~~~~~~~~

.. autofunction:: larch_3merge

larch_3split
~~~~~~~~~~~~

.. autofunction:: larch_3split

lee_angle_distance
~~~~~~~~~~~~~~~~~~

.. autofunction:: lee_angle_distance

lee_perpendicular_distance
~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: lee_perpendicular_distance

local_skeleton_clustering
~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: local_skeleton_clustering

local_skeleton_clustering_3pts
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: local_skeleton_clustering_3pts

mam_distances
~~~~~~~~~~~~~

.. autofunction:: mam_distances

minimum_closest_distance
~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: minimum_closest_distance

most_similar_track_mam
~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: most_similar_track_mam

mul_3vec
~~~~~~~~

.. autofunction:: mul_3vec

mul_3vecs
~~~~~~~~~

.. autofunction:: mul_3vecs

norm_3vec
~~~~~~~~~

.. autofunction:: norm_3vec

normalized_3vec
~~~~~~~~~~~~~~~

.. autofunction:: normalized_3vec

point_segment_sq_distance
~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: point_segment_sq_distance

point_track_sq_distance_check
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: point_track_sq_distance_check

sub_3vecs
~~~~~~~~~

.. autofunction:: sub_3vecs

track_dist_3pts
~~~~~~~~~~~~~~~

.. autofunction:: track_dist_3pts

track_roi_intersection_check
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: track_roi_intersection_check

warn
~~~~

.. autofunction:: warn


.. currentmodule:: dipy.tracking.fbcmeasures


:class:`EnhancementKernel`
~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: EnhancementKernel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`FBCMeasures`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: FBCMeasures
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`KDTree`
~~~~~~~~~~~~~~~


.. autoclass:: KDTree
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`interp1d`
~~~~~~~~~~~~~~~~~


.. autoclass:: interp1d
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

compute_rfbc
~~~~~~~~~~~~

.. autofunction:: compute_rfbc

cpu_count
~~~~~~~~~

.. autofunction:: cpu_count

determine_num_threads
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: determine_num_threads

get_sphere
~~~~~~~~~~

.. autofunction:: get_sphere

log
~~~

.. autofunction:: log

min_moving_average
~~~~~~~~~~~~~~~~~~

.. autofunction:: min_moving_average

ndindex
~~~~~~~

.. autofunction:: ndindex

sqrt
~~~~

.. autofunction:: sqrt


.. currentmodule:: dipy.tracking.learning

detect_corresponding_tracks
~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: detect_corresponding_tracks

detect_corresponding_tracks_plus
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: detect_corresponding_tracks_plus


.. currentmodule:: dipy.tracking.life


:class:`FiberFit`
~~~~~~~~~~~~~~~~~


.. autoclass:: FiberFit
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`FiberModel`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: FiberModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`LifeSignalMaker`
~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: LifeSignalMaker
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ReconstFit`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: ReconstFit
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ReconstModel`
~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ReconstModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

grad_tensor
~~~~~~~~~~~

.. autofunction:: grad_tensor

gradient
~~~~~~~~

.. autofunction:: gradient

streamline_gradients
~~~~~~~~~~~~~~~~~~~~

.. autofunction:: streamline_gradients

streamline_signal
~~~~~~~~~~~~~~~~~

.. autofunction:: streamline_signal

streamline_tensors
~~~~~~~~~~~~~~~~~~

.. autofunction:: streamline_tensors

transform_streamlines
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: transform_streamlines

unique_rows
~~~~~~~~~~~

.. autofunction:: unique_rows

voxel2streamline
~~~~~~~~~~~~~~~~

.. autofunction:: voxel2streamline


.. currentmodule:: dipy.tracking.local_tracking


:class:`AnatomicalStoppingCriterion`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: AnatomicalStoppingCriterion
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Iterable`
~~~~~~~~~~~~~~~~~


.. autoclass:: Iterable
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`LocalTracking`
~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: LocalTracking
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ParticleFilteringTracking`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ParticleFilteringTracking
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`StreamlineStatus`
~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: StreamlineStatus
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

local_tracker
~~~~~~~~~~~~~

.. autofunction:: local_tracker

pft_tracker
~~~~~~~~~~~

.. autofunction:: pft_tracker


.. currentmodule:: dipy.tracking.localtrack

local_tracker
~~~~~~~~~~~~~

.. autofunction:: local_tracker

pft_tracker
~~~~~~~~~~~

.. autofunction:: pft_tracker

random
~~~~~~

.. autofunction:: random


.. currentmodule:: dipy.tracking.mesh

random_coordinates_from_surface
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: random_coordinates_from_surface

seeds_from_surface_coordinates
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: seeds_from_surface_coordinates

triangles_area
~~~~~~~~~~~~~~

.. autofunction:: triangles_area

vertices_to_triangles_values
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: vertices_to_triangles_values


.. currentmodule:: dipy.tracking.metrics

arbitrarypoint
~~~~~~~~~~~~~~

.. autofunction:: arbitrarypoint

bytes
~~~~~

.. autofunction:: bytes

center_of_mass
~~~~~~~~~~~~~~

.. autofunction:: center_of_mass

deprecate_with_version
~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: deprecate_with_version

downsample
~~~~~~~~~~

.. autofunction:: downsample

endpoint
~~~~~~~~

.. autofunction:: endpoint

frenet_serret
~~~~~~~~~~~~~

.. autofunction:: frenet_serret

generate_combinations
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: generate_combinations

inside_sphere
~~~~~~~~~~~~~

.. autofunction:: inside_sphere

inside_sphere_points
~~~~~~~~~~~~~~~~~~~~

.. autofunction:: inside_sphere_points

intersect_sphere
~~~~~~~~~~~~~~~~

.. autofunction:: intersect_sphere

length
~~~~~~

.. autofunction:: length

longest_track_bundle
~~~~~~~~~~~~~~~~~~~~

.. autofunction:: longest_track_bundle

magn
~~~~

.. autofunction:: magn

mean_curvature
~~~~~~~~~~~~~~

.. autofunction:: mean_curvature

mean_orientation
~~~~~~~~~~~~~~~~

.. autofunction:: mean_orientation

midpoint
~~~~~~~~

.. autofunction:: midpoint

midpoint2point
~~~~~~~~~~~~~~

.. autofunction:: midpoint2point

principal_components
~~~~~~~~~~~~~~~~~~~~

.. autofunction:: principal_components

set_number_of_points
~~~~~~~~~~~~~~~~~~~~

.. autofunction:: set_number_of_points

splev
~~~~~

.. autofunction:: splev

spline
~~~~~~

.. autofunction:: spline

splprep
~~~~~~~

.. autofunction:: splprep

startpoint
~~~~~~~~~~

.. autofunction:: startpoint

winding
~~~~~~~

.. autofunction:: winding


.. currentmodule:: dipy.tracking.propspeed

eudx_both_directions
~~~~~~~~~~~~~~~~~~~~

.. autofunction:: eudx_both_directions

ndarray_offset
~~~~~~~~~~~~~~

.. autofunction:: ndarray_offset


.. currentmodule:: dipy.tracking.stopping_criterion


:class:`ActStoppingCriterion`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ActStoppingCriterion
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`AnatomicalStoppingCriterion`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: AnatomicalStoppingCriterion
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`BinaryStoppingCriterion`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: BinaryStoppingCriterion
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`CmcStoppingCriterion`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: CmcStoppingCriterion
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`StoppingCriterion`
~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: StoppingCriterion
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`StreamlineStatus`
~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: StreamlineStatus
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ThresholdStoppingCriterion`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ThresholdStoppingCriterion
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


.. currentmodule:: dipy.tracking.streamline


:class:`Streamlines`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: Streamlines
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

apply_affine
~~~~~~~~~~~~

.. autofunction:: apply_affine

bundles_distances_mdf
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: bundles_distances_mdf

cdist
~~~~~

.. autofunction:: cdist

center_streamlines
~~~~~~~~~~~~~~~~~~

.. autofunction:: center_streamlines

cluster_confidence
~~~~~~~~~~~~~~~~~~

.. autofunction:: cluster_confidence

deepcopy
~~~~~~~~

.. autofunction:: deepcopy

deform_streamlines
~~~~~~~~~~~~~~~~~~

.. autofunction:: deform_streamlines

dist_to_corner
~~~~~~~~~~~~~~

.. autofunction:: dist_to_corner

interpolate_scalar_3d
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: interpolate_scalar_3d

interpolate_vector_3d
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: interpolate_vector_3d

length
~~~~~~

.. autofunction:: length

nbytes
~~~~~~

.. autofunction:: nbytes

orient_by_rois
~~~~~~~~~~~~~~

.. autofunction:: orient_by_rois

orient_by_streamline
~~~~~~~~~~~~~~~~~~~~

.. autofunction:: orient_by_streamline

relist_streamlines
~~~~~~~~~~~~~~~~~~

.. autofunction:: relist_streamlines

select_by_rois
~~~~~~~~~~~~~~

.. autofunction:: select_by_rois

select_random_set_of_streamlines
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: select_random_set_of_streamlines

set_number_of_points
~~~~~~~~~~~~~~~~~~~~

.. autofunction:: set_number_of_points

transform_streamlines
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: transform_streamlines

unlist_streamlines
~~~~~~~~~~~~~~~~~~

.. autofunction:: unlist_streamlines

values_from_volume
~~~~~~~~~~~~~~~~~~

.. autofunction:: values_from_volume

warn
~~~~

.. autofunction:: warn


.. currentmodule:: dipy.tracking.streamlinespeed


:class:`Streamlines`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: Streamlines
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

compress_streamlines
~~~~~~~~~~~~~~~~~~~~

.. autofunction:: compress_streamlines

length
~~~~~~

.. autofunction:: length

set_number_of_points
~~~~~~~~~~~~~~~~~~~~

.. autofunction:: set_number_of_points


.. currentmodule:: dipy.tracking.utils


:class:`OrderedDict`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: OrderedDict
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`combinations`
~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: combinations
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`defaultdict`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: defaultdict
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`groupby`
~~~~~~~~~~~~~~~~


.. autoclass:: groupby
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

apply_affine
~~~~~~~~~~~~

.. autofunction:: apply_affine

cdist
~~~~~

.. autofunction:: cdist

connectivity_matrix
~~~~~~~~~~~~~~~~~~~

.. autofunction:: connectivity_matrix

density_map
~~~~~~~~~~~

.. autofunction:: density_map

dist_to_corner
~~~~~~~~~~~~~~

.. autofunction:: dist_to_corner

length
~~~~~~

.. autofunction:: length

max_angle_from_curvature
~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: max_angle_from_curvature

min_radius_curvature_from_angle
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: min_radius_curvature_from_angle

minimum_at
~~~~~~~~~~

.. autofunction:: minimum_at

ndbincount
~~~~~~~~~~

.. autofunction:: ndbincount

near_roi
~~~~~~~~

.. autofunction:: near_roi

path_length
~~~~~~~~~~~

.. autofunction:: path_length

random_seeds_from_mask
~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: random_seeds_from_mask

reduce_labels
~~~~~~~~~~~~~

.. autofunction:: reduce_labels

reduce_rois
~~~~~~~~~~~

.. autofunction:: reduce_rois

seeds_from_mask
~~~~~~~~~~~~~~~

.. autofunction:: seeds_from_mask

streamline_near_roi
~~~~~~~~~~~~~~~~~~~

.. autofunction:: streamline_near_roi

subsegment
~~~~~~~~~~

.. autofunction:: subsegment

target
~~~~~~

.. autofunction:: target

target_line_based
~~~~~~~~~~~~~~~~~

.. autofunction:: target_line_based

transform_tracking_output
~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: transform_tracking_output

unique_rows
~~~~~~~~~~~

.. autofunction:: unique_rows

warn
~~~~

.. autofunction:: warn

wraps
~~~~~

.. autofunction:: wraps


.. currentmodule:: dipy.tracking.vox2track

streamline_mapping
~~~~~~~~~~~~~~~~~~

.. autofunction:: streamline_mapping

track_counts
~~~~~~~~~~~~

.. autofunction:: track_counts

